add_library(controllers SHARED ./DefaultController.cpp ./HotelGetAllController.cpp ./LoyaltyGetByUsernameController.cpp ./MeGetByUsernameController.cpp ./ReservationCreateByUsernameController.cpp ./ReservationDeleteByUsernameNUidController.cpp ./ReservationGetByUsernameController.cpp ./ReservationGetByUsernameNUidController.cpp ./HealthController.cpp)
