add_library(app SHARED  ./App.cpp)
target_link_libraries(app controllerFactory)
target_link_libraries(app loyaltyControllers)
target_link_libraries(app defaultController)
target_link_libraries(app repositories)
target_link_libraries(app models)
target_link_libraries(app uri)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(app ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)
