add_executable(loyaltyGetAllControllerTests ./LoyaltyGetAllControllerTests.cpp)
target_link_libraries(loyaltyGetAllControllerTests repositories)
target_link_libraries(loyaltyGetAllControllerTests models)
target_link_libraries(loyaltyGetAllControllerTests uri)
target_link_libraries(loyaltyGetAllControllerTests loyaltyControllers)
target_link_libraries(loyaltyGetAllControllerTests defaultController)
target_link_libraries(loyaltyGetAllControllerTests testUtil)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(loyaltyGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(loyaltyGetByUsernameControllerTests ./LoyaltyGetByUsernameControllerTests.cpp)
target_link_libraries(loyaltyGetByUsernameControllerTests repositories)
target_link_libraries(loyaltyGetByUsernameControllerTests models)
target_link_libraries(loyaltyGetByUsernameControllerTests uri)
target_link_libraries(loyaltyGetByUsernameControllerTests loyaltyControllers)
target_link_libraries(loyaltyGetByUsernameControllerTests defaultController)
target_link_libraries(loyaltyGetByUsernameControllerTests testUtil)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(loyaltyGetByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(loyaltyDeleteByUsernameControllerTests ./LoyaltyDeleteByUsernameControllerTests.cpp)
target_link_libraries(loyaltyDeleteByUsernameControllerTests repositories)
target_link_libraries(loyaltyDeleteByUsernameControllerTests models)
target_link_libraries(loyaltyDeleteByUsernameControllerTests uri)
target_link_libraries(loyaltyDeleteByUsernameControllerTests loyaltyControllers)
target_link_libraries(loyaltyDeleteByUsernameControllerTests defaultController)
target_link_libraries(loyaltyDeleteByUsernameControllerTests testUtil)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(loyaltyDeleteByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(loyaltyCreateControllerTests ./LoyaltyCreateControllerTests.cpp)
target_link_libraries(loyaltyCreateControllerTests repositories)
target_link_libraries(loyaltyCreateControllerTests models)
target_link_libraries(loyaltyCreateControllerTests uri)
target_link_libraries(loyaltyCreateControllerTests loyaltyControllers)
target_link_libraries(loyaltyCreateControllerTests defaultController)
target_link_libraries(loyaltyCreateControllerTests testUtil)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(loyaltyCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(loyaltyUpdateByUsernameControllerTests ./LoyaltyUpdateByUsernameControllerTests.cpp)
target_link_libraries(loyaltyUpdateByUsernameControllerTests repositories)
target_link_libraries(loyaltyUpdateByUsernameControllerTests models)
target_link_libraries(loyaltyUpdateByUsernameControllerTests uri)
target_link_libraries(loyaltyUpdateByUsernameControllerTests loyaltyControllers)
target_link_libraries(loyaltyUpdateByUsernameControllerTests defaultController)
target_link_libraries(loyaltyUpdateByUsernameControllerTests testUtil)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(loyaltyUpdateByUsernameControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_test(NAME LoyaltyGetAllControllerTests COMMAND loyaltyGetAllControllerTests)
add_test(NAME LoyaltyGetByUsernameControllerTests COMMAND loyaltyGetByUsernameControllerTests)
add_test(NAME LoyaltyDeleteByUsernameControllerTests COMMAND loyaltyDeleteByUsernameControllerTests)
add_test(NAME LoyaltyCreateControllerTests COMMAND loyaltyCreateControllerTests)
add_test(NAME LoyaltyUpdateByUsernameControllerTests COMMAND loyaltyUpdateByUsernameControllerTests)
