add_executable(paymentGetAllControllerTests ./PaymentGetAllControllerTests.cpp)
target_link_libraries(paymentGetAllControllerTests repositories)
target_link_libraries(paymentGetAllControllerTests models)
target_link_libraries(paymentGetAllControllerTests uri)
target_link_libraries(paymentGetAllControllerTests paymentControllers)
target_link_libraries(paymentGetAllControllerTests defaultController)
target_link_libraries(paymentGetAllControllerTests testUtil)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(paymentGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(paymentGetByUidControllerTests ./PaymentGetByUidControllerTests.cpp)
target_link_libraries(paymentGetByUidControllerTests repositories)
target_link_libraries(paymentGetByUidControllerTests models)
target_link_libraries(paymentGetByUidControllerTests uri)
target_link_libraries(paymentGetByUidControllerTests paymentControllers)
target_link_libraries(paymentGetByUidControllerTests defaultController)
target_link_libraries(paymentGetByUidControllerTests testUtil)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(paymentGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(paymentDeleteByUidControllerTests ./PaymentDeleteByUidControllerTests.cpp)
target_link_libraries(paymentDeleteByUidControllerTests repositories)
target_link_libraries(paymentDeleteByUidControllerTests models)
target_link_libraries(paymentDeleteByUidControllerTests uri)
target_link_libraries(paymentDeleteByUidControllerTests paymentControllers)
target_link_libraries(paymentDeleteByUidControllerTests defaultController)
target_link_libraries(paymentDeleteByUidControllerTests testUtil)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(paymentDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(paymentCreateControllerTests ./PaymentCreateControllerTests.cpp)
target_link_libraries(paymentCreateControllerTests repositories)
target_link_libraries(paymentCreateControllerTests models)
target_link_libraries(paymentCreateControllerTests uri)
target_link_libraries(paymentCreateControllerTests paymentControllers)
target_link_libraries(paymentCreateControllerTests defaultController)
target_link_libraries(paymentCreateControllerTests testUtil)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(paymentCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(paymentUpdateByUidControllerTests ./PaymentUpdateByUidControllerTests.cpp)
target_link_libraries(paymentUpdateByUidControllerTests repositories)
target_link_libraries(paymentUpdateByUidControllerTests models)
target_link_libraries(paymentUpdateByUidControllerTests uri)
target_link_libraries(paymentUpdateByUidControllerTests paymentControllers)
target_link_libraries(paymentUpdateByUidControllerTests defaultController)
target_link_libraries(paymentUpdateByUidControllerTests testUtil)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(paymentUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_test(NAME PaymentGetAllControllerTests COMMAND paymentGetAllControllerTests)
add_test(NAME PaymentGetByUidControllerTests COMMAND paymentGetByUidControllerTests)
add_test(NAME PaymentDeleteByUidControllerTests COMMAND paymentDeleteByUidControllerTests)
add_test(NAME PaymentCreateControllerTests COMMAND paymentCreateControllerTests)
add_test(NAME PaymentUpdateByUidControllerTests COMMAND paymentUpdateByUidControllerTests)
