add_executable(hotelGetAllControllerTests ./HotelGetAllControllerTests.cpp)
target_link_libraries(hotelGetAllControllerTests repositories)
target_link_libraries(hotelGetAllControllerTests models)
target_link_libraries(hotelGetAllControllerTests uri)
target_link_libraries(hotelGetAllControllerTests hotelControllers)
target_link_libraries(hotelGetAllControllerTests defaultController)
target_link_libraries(hotelGetAllControllerTests testUtil)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(hotelGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(hotelGetByUidControllerTests ./HotelGetByUidControllerTests.cpp)
target_link_libraries(hotelGetByUidControllerTests repositories)
target_link_libraries(hotelGetByUidControllerTests models)
target_link_libraries(hotelGetByUidControllerTests uri)
target_link_libraries(hotelGetByUidControllerTests hotelControllers)
target_link_libraries(hotelGetByUidControllerTests defaultController)
target_link_libraries(hotelGetByUidControllerTests testUtil)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(hotelGetByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(hotelDeleteByUidControllerTests ./HotelDeleteByUidControllerTests.cpp)
target_link_libraries(hotelDeleteByUidControllerTests repositories)
target_link_libraries(hotelDeleteByUidControllerTests models)
target_link_libraries(hotelDeleteByUidControllerTests uri)
target_link_libraries(hotelDeleteByUidControllerTests hotelControllers)
target_link_libraries(hotelDeleteByUidControllerTests defaultController)
target_link_libraries(hotelDeleteByUidControllerTests testUtil)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(hotelDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(hotelCreateControllerTests ./HotelCreateControllerTests.cpp)
target_link_libraries(hotelCreateControllerTests repositories)
target_link_libraries(hotelCreateControllerTests models)
target_link_libraries(hotelCreateControllerTests uri)
target_link_libraries(hotelCreateControllerTests hotelControllers)
target_link_libraries(hotelCreateControllerTests defaultController)
target_link_libraries(hotelCreateControllerTests testUtil)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(hotelCreateControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(hotelUpdateByUidControllerTests ./HotelUpdateByUidControllerTests.cpp)
target_link_libraries(hotelUpdateByUidControllerTests repositories)
target_link_libraries(hotelUpdateByUidControllerTests models)
target_link_libraries(hotelUpdateByUidControllerTests uri)
target_link_libraries(hotelUpdateByUidControllerTests hotelControllers)
target_link_libraries(hotelUpdateByUidControllerTests defaultController)
target_link_libraries(hotelUpdateByUidControllerTests testUtil)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(hotelUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_test(NAME HotelGetAllControllerTests COMMAND hotelGetAllControllerTests)
add_test(NAME HotelGetByUidControllerTests COMMAND hotelGetByUidControllerTests)
add_test(NAME HotelDeleteByUidControllerTests COMMAND hotelDeleteByUidControllerTests)
add_test(NAME HotelCreateControllerTests COMMAND hotelCreateControllerTests)
add_test(NAME HotelUpdateByUidControllerTests COMMAND hotelUpdateByUidControllerTests)
