add_executable(reservationGetAllControllerTests ./ReservationGetAllControllerTests.cpp)
target_link_libraries(reservationGetAllControllerTests repositories)
target_link_libraries(reservationGetAllControllerTests models)
target_link_libraries(reservationGetAllControllerTests uri)
target_link_libraries(reservationGetAllControllerTests reservationControllers)
target_link_libraries(reservationGetAllControllerTests defaultController)
target_link_libraries(reservationGetAllControllerTests testUtil)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(reservationGetAllControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(reservationDeleteByUidControllerTests ./ReservationDeleteByUidControllerTests.cpp)
target_link_libraries(reservationDeleteByUidControllerTests repositories)
target_link_libraries(reservationDeleteByUidControllerTests models)
target_link_libraries(reservationDeleteByUidControllerTests uri)
target_link_libraries(reservationDeleteByUidControllerTests reservationControllers)
target_link_libraries(reservationDeleteByUidControllerTests defaultController)
target_link_libraries(reservationDeleteByUidControllerTests testUtil)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(reservationDeleteByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_executable(reservationUpdateByUidControllerTests ./ReservationUpdateByUidControllerTests.cpp)
target_link_libraries(reservationUpdateByUidControllerTests repositories)
target_link_libraries(reservationUpdateByUidControllerTests models)
target_link_libraries(reservationUpdateByUidControllerTests uri)
target_link_libraries(reservationUpdateByUidControllerTests reservationControllers)
target_link_libraries(reservationUpdateByUidControllerTests defaultController)
target_link_libraries(reservationUpdateByUidControllerTests testUtil)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoNet.so)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoData.so)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoUtil.so)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoFoundation.so)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoXML.so)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoJSON.so)
target_link_libraries(reservationUpdateByUidControllerTests ${CMAKE_SOURCE_DIR}/libs/libPocoDataPostgreSQL.so)

add_test(NAME ReservationGetAllControllerTests COMMAND reservationGetAllControllerTests)
add_test(NAME ReservationDeleteByUidControllerTests COMMAND reservationDeleteByUidControllerTests)
add_test(NAME ReservationUpdateByUidControllerTests COMMAND reservationUpdateByUidControllerTests)
